--- a/src/App.scss
+++ b/src/App.scss
@@ -51,8 +51,15 @@ ul {
 }
 
 /* --------------------- GAMES LIST --------------------- */
+
+.scrollable {
+    min-height: 70vh;
+    max-height: 70vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    border-left: 1px solid var(--accent);
+}
 .listColumn {
-    border-right: 1px solid var(--accent);
     padding: 0;
 }
 /* .list {
@@ -277,6 +284,7 @@ ul {
 /* --------------------- FIRST ROW ---------------------*/
 .listHeader {
     border-bottom: 1px solid var(--accent);
+    border-left: 1px solid var(--accent);
     margin-left: 0;
     margin-right: 0;
    /*  background: rgb(149, 167, 176);
@@ -306,7 +314,6 @@ ul {
 
 .sideBarColumn {
     height: 75vh;
-    border-right: 1px solid var(--accent);
 }
 .tabSelectors {
     margin-top: 3.2rem;
@@ -369,7 +376,7 @@ ul {
 }
 
 .active > .listHeader >.col >.bookmark {
-    margin-right: -0.1rem;
+
     width: 1.8rem;
     height: 1.8rem;
     background-color: var(--c1);
@@ -557,6 +564,7 @@ select:hover, select:focus {
 .container-xxl {
     margin: 0px !important;
     max-width: 95vw;
+    max-height: 100vh;
 }
 
 .col-sm-2 {
@@ -603,3 +611,25 @@ input[type=number] {
 ul {
     padding: 0 !important;
 }
+
+/* --------------------- SCROLLBARS ---------------------*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--base); 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--accent); 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--accent); 
+  }
