--- a/src/App.scss
+++ b/src/App.scss
@@ -188,12 +188,12 @@ ul {
 }
 
 .scrollable {
-    height: 95%;
-    max-height: 95%;
+    margin-top: 1%;
+    height: 94%;
+    max-height: 94%;
     overflow-x: hidden;
     overflow-y: scroll;
     border: 1px solid var(--accent);
-    border-top: none;
     background-color: var(--darkBgBase);
 }
 .scrollable ul {
@@ -252,6 +252,33 @@ ul {
     background: none;
     font-size: 1.5rem;
     color: var(--accent);
+}
+
+.gameMobile {
+    padding: 0.5rem;
+}
+
+.gameCard{
+    width: 100%;
+    height: 27vh;
+    overflow: hidden;
+}
+.card-img-overlay {
+    height: 30%;
+    position: absolute;
+    top:72%;
+    background-color: var(--darkBgAccentOpaque);
+    color: var(--accent);
+    border-radius: 0;
+    padding: 0.2rem;
+    padding-left: 0.5rem;
+}
+.card-title {
+    color: white;
+}
+.card-text {
+    padding-left: 1rem;
+    width: 50%;
 }
 
 /* --------------------- GAME ROW FIELDS --------------------- */
